# gnu2-demangler

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
gnu2_demangler/: __init__.py  cli.py  cxx.py  demangler.py  io_util.py  strenum.py  token.py
tests/: test_demangler.py
