[tool.poetry]
name = "gnu2-demangler"
version = "0.0.1"
description = "Demangler for GNU v2 C++ symbols"
packages = [{ include = "gnu2_demangler" }]
authors = ["Abel Briggs <abelbriggs1@hotmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.dev.dependencies]
pre-commit = "*"
pytest = "*"
ruff = "*"
isort = "*"

[tool.ruff]
line-length = 100

[tool.isort]
profile = "black"

[tool.ruff.lint.per-file-ignores]
# https://beta.ruff.rs/docs/rules/
"__init__.py" = ["F401","F403","F405"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
